# ssrm

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  runchecks.yml  scan.yml
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: bench_ssrm.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  reference.rst
notebooks/: introduction.ipynb
ssrm_test/: constants.py  ssrm_test.py  test_jupyter_notebooks.py  test_ssrm_test.py
ssrm_test/jupyter_notebook_testing_output/: introduction.ipynb
