[tool.poetry]
name = "ssrm_test"
version = "0.1.1"
description = "A library for Bayesian Sequential Sample Ratio Mismatch (SRM) test."
authors = [
  "Michael Lindon <michael.lindon@optimizely.com>"
]
readme = "README.md"
repository = "https://github.com/optimizely/ssrm"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
scipy = "^1.3"
toolz = "^0.10.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
black-nbconvert = "^0.2"
flake8 = "^3.7.9"
isort = "^4.3.21"
jupyterlab = "^2.0.0"
pre-commit = "^1.18.3"
pytest = "^5.2.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
