[tool.poetry]
name = "ssrm_test"
version = "0.1.6"
description = "A library for Sequential Sample Ratio Mismatch (SRM) test."
authors = [
  "Michael Lindon <michael.lindon@optimizely.com>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pythonhubdev/ssrm"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "2.2.5"
scipy = "^1.15.2"
toolz = "^1.0.0"

[tool.poetry.group.dev.dependencies]
asv = "^0.6.4"
autoflake = "^2.3.1"
black = "^25.1.0"
black-nbconvert = "^0.4.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
jupyterlab = "^4.4.2"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
Sphinx = "^8.2.3"
sphinx_rtd_theme = "^3.0.2"
m2r = "^0.3.1"
papermill = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"